<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnsPage">

    <EditText
        android:id="@+id/editSn"
        android:layout_width="394dp"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textMultiLine"
        android:text="@string/helloeee"
        android:textAlignment="center"
        android:textColor="#0B0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Sn" />

    <TextView
        android:id="@+id/Sn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/Solution"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEPr" />

    <EditText
        android:id="@+id/editEPr"
        android:layout_width="394dp"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textMultiLine"
        android:text="@string/helloee"
        android:textAlignment="center"
        android:textColor="#0B0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txEPr" />

    <TextView
        android:id="@+id/txEPr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/ess_prime_implecants"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPr" />

    <TextView
        android:id="@+id/txPr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/prime_Implecants"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editPr"
        android:layout_width="394dp"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textMultiLine"
        android:text="@string/helloe"
        android:textAlignment="center"
        android:textColor="#0B0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txPr" />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="60dp"
        android:onClick="onSteps"
        android:text="@string/show_Steps"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSn" />

</androidx.constraintlayout.widget.ConstraintLayout>
